--- a/README
+++ b/README
@@ -6,8 +6,8 @@ under Windows. It consists of VBCC, VASM, VLINK and PosixLib.
 Installation
 ------------
 Install everything to "C:\amiga-dev\", add "C:\amiga-dev\bin\" to PATH, and
-set the VBCC environment variable to "C:\amiga-dev\". Now you should be good
-to go.
+set the VBCC environment variable to "C:\amiga-dev\targets\m68k-amigaos".
+Now you should be good to go.
 
 Credits
 -------
